tests/duarouter/function/skip_routing/invalid/gaps_alt/errors.duarouter
Error: Vehicle '9' has no valid route. No connection between edge 'beg' and edge 'end'.
